[gd_scene load_steps=17 format=2]

[ext_resource path="res://scripts/splash.gd" type="Script" id=1]
[ext_resource path="res://fonts/PressStart2P.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/title.gd" type="Script" id=3]
[ext_resource path="res://sprites/ship.png" type="Texture" id=4]
[ext_resource path="res://sprites/light.png" type="Texture" id=5]
[ext_resource path="res://sprites/weight.png" type="Texture" id=6]
[ext_resource path="res://sprites/starfield512x512.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 8
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 5
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 5
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 5
outline_color = Color( 0.666667, 0.666667, 0.666667, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 5
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 6
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
size = 4
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=9]
default_font = SubResource( 8 )

[node name="splash" type="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="vbox" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1

[node name="hbox_title" type="HBoxContainer" parent="vbox"]
margin_top = 16.0
margin_right = 320.0
margin_bottom = 32.0
alignment = 1

[node name="title" type="Label" parent="vbox/hbox_title"]
margin_left = 104.0
margin_right = 216.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.666667, 0.666667, 0.666667, 1 )
text = "Hollows"
align = 1
script = ExtResource( 3 )

[node name="hbox_player" type="HBoxContainer" parent="vbox"]
margin_top = 52.0
margin_right = 320.0
margin_bottom = 72.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 3
alignment = 1

[node name="player" type="Sprite" parent="vbox/hbox_player"]
texture = ExtResource( 4 )
vframes = 2

[node name="Light2D" type="Light2D" parent="vbox/hbox_player/player"]
texture = ExtResource( 5 )
texture_scale = 0.13

[node name="weight" type="Sprite" parent="vbox/hbox_player"]
texture = ExtResource( 6 )
vframes = 2

[node name="hbox_start" type="HBoxContainer" parent="vbox"]
margin_top = 92.0
margin_right = 320.0
margin_bottom = 106.0
alignment = 1

[node name="start_button" type="Button" parent="vbox/hbox_start"]
margin_left = 115.0
margin_right = 205.0
margin_bottom = 14.0
rect_min_size = Vector2( 90, 14 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.666667, 0.666667, 0.666667, 1 )
text = "Start"

[node name="hbox_controls" type="HBoxContainer" parent="vbox"]
margin_top = 126.0
margin_right = 320.0
margin_bottom = 138.0
custom_constants/separation = 10
alignment = 1

[node name="credits_button" type="Button" parent="vbox/hbox_controls"]
margin_left = 16.0
margin_right = 76.0
margin_bottom = 12.0
rect_min_size = Vector2( 60, 0 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.666667, 0.666667, 0.666667, 1 )
text = "Credits"

[node name="fx_button" type="Button" parent="vbox/hbox_controls"]
margin_left = 86.0
margin_right = 146.0
margin_bottom = 12.0
rect_min_size = Vector2( 60, 12 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.666667, 0.666667, 0.666667, 1 )
text = "FX ON"

[node name="music_button" type="Button" parent="vbox/hbox_controls"]
margin_left = 156.0
margin_right = 216.0
margin_bottom = 12.0
rect_min_size = Vector2( 60, 0 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.666667, 0.666667, 0.666667, 1 )
text = "Music OFF"

[node name="skip_button" type="Button" parent="vbox/hbox_controls"]
margin_left = 226.0
margin_right = 303.0
margin_bottom = 12.0
rect_min_size = Vector2( 77, 12 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.666667, 0.666667, 0.666667, 1 )
text = "Skip training"

[node name="hbox_footer" type="HBoxContainer" parent="vbox"]
margin_top = 158.0
margin_right = 320.0
margin_bottom = 164.0
alignment = 1

[node name="footer" type="Label" parent="vbox/hbox_footer"]
margin_left = 160.0
margin_right = 160.0
margin_bottom = 6.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0.666667, 0.666667, 0.666667, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
align = 1
valign = 1

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
offset = Vector2( 160, 90 )
transform = Transform2D( 1, 0, 0, 1, 160, 90 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2( -256, -128 )
motion_scale = Vector2( 0.4, 0.4 )
motion_mirroring = Vector2( 512, 396 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
texture = ExtResource( 7 )

[node name="credits_dialog" type="AcceptDialog" parent="."]
light_mask = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 9 )
popup_exclusive = true
window_title = "Credits"
[connection signal="pressed" from="vbox/hbox_start/start_button" to="." method="_on_start_button_pressed"]
[connection signal="button_down" from="vbox/hbox_controls/credits_button" to="." method="_on_credits_button_button_down"]
[connection signal="pressed" from="vbox/hbox_controls/fx_button" to="." method="_on_fx_button_pressed"]
[connection signal="pressed" from="vbox/hbox_controls/music_button" to="." method="_on_music_button_pressed"]
[connection signal="pressed" from="vbox/hbox_controls/skip_button" to="." method="_on_skip_button_pressed"]
